--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
   <!-- endbower -->
   <!-- inject:js -->
   <script src="js/app.js"></script>
+  <script src="secrets/keys.value.js"></script>
   <script src="js/weather.controller.js"></script>
   <script src="js/weather.factory.js"></script>
   <!-- endinject -->
